<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OpenRocket</string>
    <string name="version">version 12.09</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="dismiss">Dismiss</string>
    <string name="load">Load</string>
    <string name="save">Save</string>
    <string name="Add">Add</string>
    <string name="MotorListTitle">Motor List</string>
    <string name="Download">Download</string>
    <string name="About">About</string>
    <string name="Preferences">Preferences</string>
    <string name="missingMotors">Missing Motors</string>
    <string name="missingMotorsMessageStart">The following motors are missing:</string>
    <string name="missingMotorsMessageEnd">Would you like to download them from Thrustcurve?</string>
    <string name="configurePlot">Change Plot</string>
    <string name="view_events">View Events</string>
    <string name="simulationPlotDialogTitle">Select Series And Events</string>
    <string name="DeleteConfigTitle">Delete Motor Configuration</string>
    
    <string name="plot">Plot</string>
    <string name="saving">Saving file…</string>
    <string name="loading">Loading file…</string>
    <string name="loadWarnUnsaved">Would you like to save the changes to the current model?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="autoSaveMessage">Automatically saving rocket</string>
    <string name="loadingErrorMessage">Error Loading File</string>

    <string-array name="PreferenceMotorBrowserGroupingEntries">
        <item>Case</item>
        <item>Diameter</item>
        <item>Impulse</item>
        <item>Manufacturer</item>
    </string-array>

    <string name="TCMotorSearchFormSubmit">Submit</string>
    <string name="TCMotorSearchFormTitle">Download from Thrustcurve.org</string>
    <string name="overviewConfigurationSpinnerPrompt">Select Configuration</string>
    <string name="simulationSeries1Label">Series 1</string>
    <string name="simulationSeries2Label">Series 2</string>

    <string name="autosavetitle">Autosave Rocket</string>
    <string name="autosavesummary">Automatically save the rocket document after simulations</string>
    
    <string name="motorbrowsergrouptitle">Motor Browser Grouping</string>
    <string name="motorbrowsergroupsummary">Set the grouping in Motor Browser</string>
    
    <string name="motorbrowsertitle">Motor Browser</string>
    
    <string name="useinternalfilebrowsertitle">Use Internal File Browser</string>
    <string name="useinternalfilebrowsersummary">Check to use built in file browser instead of external file browser</string>
    
    <string name="showonlyorkfiles">Show only ORK files in Internal File Browser</string>
    <string name="showonlyorkfilessummary">Check to show only .ork files in internal file browser</string>
    
    <string-array name="PreferenceUnitLengthEntries">
        <item>Millimeters</item>
        <item>Centimeters</item>
        <item>Meters</item>
        <item>Inches</item>
        <item>Feet</item>
    </string-array>
    <string-array name="PreferenceUnitMassEntries">
        <item>Grams</item>
        <item>Kilograms</item>
        <item>Ounces</item>
        <item>Pounds</item>
    </string-array>
    <string-array name="PreferenceUnitVelocityEntries">
        <item>Meters/Second</item>
        <item>Kilometers/Hour</item>
        <item>Feet/Second</item>
        <item>Miles/Hour</item>
    </string-array>
    <string-array name="PreferenceUnitDistanceEntries">
        <item>Meters</item>
        <item>Kilometers</item>
        <item>Feet</item>
        <item>Yards</item>
        <item>Miles</item>
        <item>Nautical Miles</item>
    </string-array>
        <string name="rocket_cg">CG</string>
        <string name="rocket_designer">Designer</string>
        <string name="rocket_length">Length</string>
        <string name="rocket_emptymass">Empty Mass</string>
        <string name="rocket_stagecount">Stage Count</string>
        <string name="rocket_liftoffweight">Lift off weight</string>
        <string name="rocket_cp">CP</string>
        <string name="rocket_stabilitymargin">Stability margin</string>
        <string name="openfilelabel">Open ork file</string>
        <string name="viewmotorslabel">View motors</string>
        <string name="motor_manufacturer">Manufacturer</string>
        <string name="motor_commonname">Common Name</string>
        <string name="motor_delays">Delays</string>
        <string name="motor_caseinfo">Case Info</string>
        <string name="motor_impulseclass">Impulse Class</string>
        <string name="motor_diameter">Diameter</string>
        <string name="motor_length">Length</string>
        <string name="simulationConditionSelectMotors">Select Motors</string>
        <string name="simulationConditionWind">Wind speed</string>
        <string name="simulationConditionsRodLength">Launch Rod Length</string>
        <string name="simulationConditionsLaunchRodAngle">Launch Rod Angle</string>
        <string name="simulationConditionsLaunchRodDirection">Launch Rod Direction</string>
        <string name="select_motor">Select Motor</string>
        <string name="select_delay">Delay</string>
        <string name="Delete">Delete</string>
        <string name="Run">Run</string>
        <string name="Edit">Edit</string>

</resources>