<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_load"
        android:icon="@drawable/ic_menu_archive"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"
        android:title="@string/load"/>
    <item
        android:id="@+id/menu_save"
        android:icon="@drawable/ic_menu_save"
        android:orderInCategory="0"
        android:showAsAction="ifRoom"
        android:title="@string/save"/>
    <item
        android:id="@+id/motor_list_menu_option"
        android:icon="@drawable/ic_motorbrowser"
        android:orderInCategory="10"
        android:showAsAction="ifRoom"
        android:title="@string/viewmotorslabel"/>
    <item
        android:id="@+id/preference_menu_option"
        android:icon="@drawable/ic_menu_preferences"
        android:orderInCategory="10"
        android:title="@string/Preferences"/>
    <item
        android:id="@+id/menu_about"
        android:icon="@drawable/ic_menu_info_details"
        android:orderInCategory="10"
        android:showAsAction="never"
        android:title="@string/About"/>

</menu>