<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/simulationSeries1Label" />

    <Spinner
        android:id="@+id/simulationSeries1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawSelectorOnTop="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/simulationSeries2Label" />

    <Spinner
        android:id="@+id/simulationSeries2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawSelectorOnTop="true" />

    <ListView
        android:id="@+id/simulationEventsList"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/simulationOkButton"
        android:layout_width="70dp"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/plot" />

</LinearLayout>